Wrapping main app with <main>, adding basic styles. Adding glyphicon fix for voter component.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,8 @@
+.main {
+	padding: 40px;
+	background-color: beige;
+}
+
 .animated {
 	transition: all 0.4s;
 }
